--- a/styles/_animations.scss
+++ b/styles/_animations.scss
@@ -15,3 +15,23 @@
     opacity: 1;
   }
 }
+
+@keyframes slideModal {
+  0% {
+    transform: translateY(-200%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
