--- a/styles/_search-bar.scss
+++ b/styles/_search-bar.scss
@@ -12,6 +12,7 @@
     outline: 1px solid var(--primary-color);
   }
   .input {
+    font-family: "Poppins", sans-serif;
     flex: 1;
     border: none;
     background: none;
