--- a/styles/main.scss
+++ b/styles/main.scss
@@ -107,6 +107,7 @@ p {
 @import "card";
 @import "logo";
 @import "navbar";
+@import "login/index";
 @import "dashboard/index";
 @import "calendar/index";
 @import "rooms/index";
