--- a/styles/main.scss
+++ b/styles/main.scss
@@ -10,6 +10,8 @@
   --quinary-color: #1b9aaa;
   --background-color: #f8f9ff;
   --disabled-color: #eaeaea;
+  --danger-color: #c42020;
+  --danger-color-dark: #a41a1a;
   --error-color: #c42020;
   --card-color: #ffffff;
   --box-shadow: 4px 4px 20px rgba(231, 69, 163, 0.15);
