--- a/styles/_logo.scss
+++ b/styles/_logo.scss
@@ -1,5 +1,6 @@
 .logo {
-  font-size: 1.2rem;
+  width: 2.5rem;
+  height: auto;
   text-align: center;
   color: var(--text-color);
   margin-bottom: 5rem;
