--- a/styles/main.css
+++ b/styles/main.css
@@ -7,6 +7,8 @@
   --quinary-color: #1b9aaa;
   --background-color: #f8f9ff;
   --disabled-color: #eaeaea;
+  --danger-color: #c42020;
+  --danger-color-dark: #a41a1a;
   --error-color: #c42020;
   --card-color: #ffffff;
   --box-shadow: 4px 4px 20px rgba(231, 69, 163, 0.15);
@@ -183,6 +185,12 @@ p {
   padding: 1rem 2rem;
   border-radius: 0.5rem;
   background-color: white;
+}
+.btn--danger {
+  background-image: linear-gradient(to left top, var(--danger-color) 0%, var(--danger-color-dark) 80%);
+  color: white;
+  padding: 1rem 2rem;
+  border-radius: 0.5rem;
 }
 
 .search-bar {
@@ -388,7 +396,8 @@ p {
 }
 
 .logo {
-  font-size: 1.2rem;
+  width: 2.5rem;
+  height: auto;
   text-align: center;
   color: var(--text-color);
   margin-bottom: 5rem;
@@ -573,7 +582,7 @@ p {
 }
 .recent__item {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   place-items: start;
   font-size: clamp(1rem, 3vw, 1.4rem);
   padding: clamp(1rem, 2vw, 1.5rem);
@@ -584,7 +593,6 @@ p {
 }
 .recent__item--header * {
   font-weight: bold;
-  font-size: clamp(1.6rem, 4vw, 2rem);
 }
 .recent__item:hover:not(:first-child) {
   transform: scale(1.02);
@@ -660,19 +668,26 @@ p {
   grid-template-columns: repeat(7, 1fr);
   gap: 2px;
 }
-.calendar-month__days__day {
+.calendar-month__day {
   position: relative;
-  background-color: var(--card-color);
   animation: fade-in 0.3s ease-in-out forwards;
 }
-.calendar-month__days__day--past {
+.calendar-month__day > * {
+  background-color: var(--card-color);
+  display: block;
+  position: relative;
+  font-size: clamp(1rem, 2vw, 1.6rem);
+  height: clamp(7.5rem, 10vw, 12rem);
+  padding: clamp(0.5rem, 2vw, 2.5rem);
+}
+.calendar-month__day--past {
   opacity: 0.5;
   background-color: var(--disabled-color);
 }
-.calendar-month__days__day--today {
+.calendar-month__day--today {
   outline: 2px solid var(--primary-color);
 }
-.calendar-month__days__day--low::after {
+.calendar-month__day--low::after {
   position: absolute;
   content: "";
   display: block;
@@ -684,7 +699,7 @@ p {
   background-color: #4caf50;
   box-shadow: 0 0 10px var(--box-shadow);
 }
-.calendar-month__days__day--medium::after {
+.calendar-month__day--medium::after {
   position: absolute;
   content: "";
   display: block;
@@ -696,11 +711,11 @@ p {
   background-color: #ffc107;
   box-shadow: 0 0 10px var(--box-shadow);
 }
-.calendar-month__days__day--full {
+.calendar-month__day--full {
   opacity: 0.5;
   background-color: #e53935;
 }
-.calendar-month__days__day--full::after {
+.calendar-month__day--full::after {
   position: absolute;
   content: "";
   display: block;
